--- a/src/assets/styles/abstracts/_variables.scss
+++ b/src/assets/styles/abstracts/_variables.scss
@@ -1,5 +1,4 @@
 $theme-color: #0078d7;
-$theme-background-color: #FFFFFF;
 $text-color:#5c6b7e;
 
 /*Toast colors*/
@@ -14,8 +13,6 @@ $toast-warning-color: #f89406;
 /*common colors*/
 
 $gray-color: #555555;
-$gray-color-1: #90949c;
-$light-gray-color: #CCCCCC;
 $white-color: #ffffff;
 $black-color: #000000;
 $red-color: #fa3e3e;
@@ -30,8 +27,11 @@ $font-size-large-2: 50px;
 $font-size-large-3: 100px;
 
 /*Font Family*/
-
 $app-font-family: 'LatoRegular', sans-serif;
+$app-dashboard-font-family:'LatoRegular', sans-serif;
+$error-font-family: 'LatoRegular', sans-serif;
+$glyphicons-font: 'Glyphicons Halflings';
+$mydatepicker: 'mydatepicker';
 
 /*----- SPACE variable-----*/
 $xxs : 5px;
@@ -41,12 +41,3 @@ $medium : 50px;
 $large : 75px;
 $xlarge : 100px;
 $xxlarge: 150px;
-
-/*----- Modal Size (width) variable-----*/
-$modal-small : 400px;
-$modal-xsmall : 500px;
-$modal-medium : 576px;
-$modal-xmedium : 700px;
-$modal-xlarge : 800px;
-$modal-xxlarge : 990px;
-$modal-auto : auto;
