--- a/src/app/watson-for-genomics/components/navigation/navigation.component.scss
+++ b/src/app/watson-for-genomics/components/navigation/navigation.component.scss
@@ -1,121 +1,81 @@
-.header {
-    background-color: #6bb756;
-    color: #ffffff;
-    border: none;
-    background: linear-gradient( to right, rgba(107, 183, 86, 0.95), rgba(0, 143, 104, 0.95));
-    height: 3.75rem;
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-    .navbar-brand {
-        img {
-            position: relative;
-            margin-top: -21px;
-            margin-right: 20px;
-            top: 12px;
-            height: 40px;
+   
+    .wrapper {
+        height: 100vh;
+        width: 100%;
+        padding: 0;
+        margin: 0;
+        margin-top:4vw;
+        .tab-button {
+            float: left;
+            background-color: transparent;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            padding:0;
+            .list-group{
+            .list-group-item {
+              display: block;
+              background-color: inherit;
+              color: white;
+              padding: 1.2vw 1vw;
+              width: 100%;
+              border: none;
+              border-radius: 0;
+              outline: none;
+              text-align: center;
+              cursor: pointer;
+              transition: 0.3s;
+              font-size: 1.3vw;
+              &:hover, &.active {
+                background-color: #3391bd;
+              }
+            }
+                
         }
-        color: #ffffff !important;
-        text-transform: capitalize;
-        line-height: 23px;
-        font-size: 16px;
-        i {
-            &.fa-2x {
-                font-size: 20px !important;
+          }
+          
+          .tab-content {
+            float: left;
+            padding: 0px 0.9vw;
+            border-left: none;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            background: white;
+            color:black;
+          }
+        
+      }
+   
+  .navbar.navbar-fixed-top {
+     margin-bottom:0;
+     min-height:4vw;
+     background-color:#1c303e;
+    .navbar-menu{
+        display: flex;
+        flex-wrap: nowrap;
+      justify-content: space-between;
+      flex-direction: row;
+        .navbar-header, .logo-head, .navbar-list{
+            width:33.33%;
+            display:inline-block;
+            
+            .navbar-brand{
+                color:white;
+            &:hover{
+                color:white; 
+            }
             }
         }
-    }
-    .nav-menu-list-left {
-        li {
-            a {
-                color: #ffffff !important;
-                text-transform: capitalize;
-                line-height: 20px;
-                font-size: 14px;
-                i {
-                    &.fa-2x {
-                        font-size: 20px !important;
-                    }
-                }
-                &:hover,
-                &:focus,
-                .active {
-                    color: rgba(255, 255, 255, 0.7) !important;
-                    background-color: rgba(0, 0, 0, 0.1) !important;
-                }
-            }
-            &.active {
-                a {
-                    background-color: rgba(0, 0, 0, 0.1);
-                }
+        .logo-head{
+            width:33.33%;
+            color:white;
+            padding: 15px 15px;
+            text-align: center;
+            &:hover{
+                color:white; 
             }
         }
+    
     }
-    .nav-menu-list-right {
-        li {
-            a {
-                color: #ffffff !important;
-                text-transform: capitalize;
-                line-height: 17px;
-                font-size: 14px;
-                i {
-                    &.fa-2x {
-                        font-size: 20px !important;
-                    }
-                }
-                &:hover {
-                    color: #fae042 !important; //background-color: rgba(0, 0, 0, .1) !important;
-                }
-            }
-        }
-    }
-    .navbar-collapse {
-        border-color: transparent;
-        box-shadow: none;
-        &.collapse {
-            border-color: transparent;
-            box-shadow: none;
-        }
-        &.in {
-            background: linear-gradient( to right, rgba(107, 183, 86, 0.95), rgba(0, 143, 104, 0.95));
-        }
-    }
-    .navbar-toggle {
-        border: none;
-        border-radius: 0;
-        &:hover,
-        &:focus,
-        .active {
-            color: rgba(255, 255, 255, 0.7) !important;
-            background-color: rgba(0, 0, 0, 0.1) !important;
-        }
-    }
-}
-
-
-/* Custom, iPhone Retina */
-
-@media only screen and (min-width: 320px) {
-    .header {
-        .nav-menu-list-right {
-            li {
-                a {
-                    float: left;
-                }
-            }
-        }
-    }
-}
-
-
-/* Extra Small Devices, Phones */
-
-@media only screen and (min-width: 480px) {
-    .header {
-        .nav-menu-list-right {
-            li {
-                a {
-                    float: left;
-                }
-            }
-        }
-    }
-}
+  }
